--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "valo-store-bot",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "A simple Discord bot that retrieves the skins on sale in one’s Valorant store",
   "repository": "github:sudhxnva/valo-store-bot",
   "main": "index.js",
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "canvas": "^2.7.0",
+    "discord-reply": "^0.1.2",
     "discord.js": "^12.5.3",
     "dotenv": "^8.2.0",
     "mongoose": "^5.12.7",
