--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "discord.js": "^12.5.3",
     "dotenv": "^8.2.0",
     "mongoose": "^5.12.7",
+    "node-fetch": "^2.6.1",
     "node-html-to-image": "^3.1.0",
     "valorant.js": "^1.6.4"
   },
